--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   style-src 'self' 'unsafe-inline';
   img-src 'self' data: https:;
   font-src 'self' data:;
-  connect-src 'self' http://localhost:5046 https://localhost:5046;
+  connect-src 'self' http://localhost:* https://localhost:*;
   frame-ancestors 'none';
   base-uri 'self';
   form-action 'self';
